# ComfyUI_AB_Wildcard

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
js/: umi_wildcards.js
wildcards/: PROMPT_TEMPLATES.txt  globals.yaml
wildcards/examples/: characters.yaml  colors.txt  environments.yaml  lighting.txt  moods.txt  quality.txt  styles.txt  subjects.txt
