[project]
name = "ab_wildcard"
description = "Simple node for advanced wildcard text processing. Supports variables, conditionals, tag aggregation, weighted selection, and deep nesting. Lightweight, fast, zero external dependencies."
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/a-und-b/ComfyUI_AB_Wildcard"

[tool.comfy]
PublisherId = "a-und-b"
DisplayName = "AB Wildcard Text Processor"
Icon = ""
